# mpu6050

./: Cargo.toml
examples/: motion_detection.rs  simple.rs  test.rs
src/: bits.rs  device.rs  lib.rs
