[package]
name = "mpu6050"
version = "0.1.6"
authors = ["Julian Gaal <gjulian@uos.de>"]
edition = "2018"

description = "Platform agnostic driver for MPU6050 6-axis IMU"
repository = "https://github.com/juliangaal/mpu6050"
readme = "README.md"
keywords = ["mpu6050", "imu", "embedded"]
license = "MIT"

[dependencies]
embedded-hal = "0.2.4"
micromath = {version = "2", features = ["vector"] }

[dev-dependencies]
i2cdev = "0.6.0"
linux-embedded-hal = "0.3.2"
