[package]
name = "mpu6050"
version = "0.2.0"
authors = ["Julian Gaal <gjulian@uos.de>"]
edition = "2018"

description = "Platform agnostic driver for MPU6050 6-axis IMU"
repository = "https://github.com/juliangaal/mpu6050"
readme = "README.md"
keywords = ["mpu6050", "imu", "embedded"]
license = "MIT"

[features]
defmt = ["dep:defmt"]   # crreatea a defmt formatter for the error type
shared_i2c = []         # use shared i2c bus via Rc<RefCell<I2c>>

[dependencies]
embedded-hal = "0.2"
micromath = {version = "2", features = ["vector"] }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
i2cdev = "0.6.0"

