[package]
name = "mpu6050"
version = "0.2.0"
authors = ["Julian Gaal <gjulian@uos.de>"]
edition = "2018"

description = "Platform agnostic driver for MPU6050 6-axis IMU"
repository = "https://github.com/juliangaal/mpu6050"
readme = "README.md"
keywords = ["mpu6050", "imu", "embedded"]
license = "MIT"

[features]
defmt = ["dep:defmt"]   # creates a defmt formatter for the error type

[dependencies]
embedded-hal = "1.0"
micromath = {version = "2", features = ["vector"] }
defmt = { version = "0.3", optional = true }

[dev-dependencies]
i2cdev = "0.6.0"

